--- a/stories/cv.html
+++ b/stories/cv.html
@@ -76,13 +76,16 @@
             <ul class="nav navbar-nav">
                 
                 <li>
-<a href="../archive.html">Archive</a>
+<a href="../archive.html">Arxiv</a>
                 </li>
 <li>
-<a href="../categories/index.html">Tags</a>
+<a href="../categories/index.html">Teqlər</a>
                 </li>
 <li>
-<a href="../rss.xml">RSS feed</a>
+<a href="../rss.xml">RSS</a>
+                </li>
+<li>
+<a href="../about/about.html">Haqqımda</a>
 
                 
             </li>
