--- a/stories/about.html
+++ b/stories/about.html
@@ -28,13 +28,13 @@
     
         <meta name="og:title" content="About">
         <meta name="og:url" content="http://knulphaller.github.io/stories/about.html">
-            <meta name="og:description" content="Mən sadəcə kodlarnan dünyanı dəyişməyə çalışan biriyəm...
-Just
+            <meta name="og:description" content="Just another python beginner...
 &gt;&gt;&gt; import this
 The Zen of Python, by Tim Peters
 Beautiful is better than ugly.
 Explicit is better than implicit.
-Simple is better than c">
+Simple is better than complex.
+Complex is better than ">
         <meta name="og:site_name" content="Just another simple blog">
         <meta name="og:type" content="article">
 
@@ -47,13 +47,13 @@ Simple is better than c">
     
         <meta name="og:title" content="About">
         <meta name="og:url" content="http://knulphaller.github.io/stories/about.html">
-            <meta name="og:description" content="Mən sadəcə kodlarnan dünyanı dəyişməyə çalışan biriyəm...
-Just
+            <meta name="og:description" content="Just another python beginner...
 &gt;&gt;&gt; import this
 The Zen of Python, by Tim Peters
 Beautiful is better than ugly.
 Explicit is better than implicit.
-Simple is better than c">
+Simple is better than complex.
+Complex is better than ">
         <meta name="og:site_name" content="Just another simple blog">
         <meta name="og:type" content="article">
 
@@ -89,8 +89,7 @@ Simple is better than c">
 
     </header>
     <div itemprop="articleBody text">
-    <h4>Mən sadəcə kodlarnan dünyanı dəyişməyə çalışan biriyəm...</h4>
-<p>Just</p>
+    <h4>Just another python beginner...</h4>
 <pre class="code literal-block"><span class="o">&gt;&gt;&gt;</span> <span class="n">import</span> <span class="n">this</span>
 <span class="n">The</span> <span class="n">Zen</span> <span class="n">of</span> <span class="n">Python</span><span class="p">,</span> <span class="n">by</span> <span class="n">Tim</span> <span class="n">Peters</span>
 <span class="n">Beautiful</span> <span class="n">is</span> <span class="n">better</span> <span class="n">than</span> <span class="n">ugly</span><span class="p">.</span>
