--- a/archive.html
+++ b/archive.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Coding&amp;Life">
     <meta name="viewport" content="width=device-width">
-    <title>Archive | Just another simple blog</title>
+    <title>Arxiv | Just another simple blog</title>
 
     
             <link href="assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
@@ -43,7 +43,7 @@
             
 <article class="listpage">
     <header>
-        <h1>Archive</h1>
+        <h1>Arxiv</h1>
     </header>
     <ul class="postlist">
         <li>
