--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             
         <div itemprop="keywords" class="tags">
         <ul>
-        Tags : 
+        Teqlər : 
            <li><a class="tag p-category" href="categories/python.html" rel="tag">Python</a></li>
         </ul>
         </div>
@@ -84,7 +84,7 @@
             
         <div itemprop="keywords" class="tags">
         <ul>
-        Tags : 
+        Teqlər : 
            <li><a class="tag p-category" href="categories/modullar.html" rel="tag">Modullar</a></li>
            <li><a class="tag p-category" href="categories/python.html" rel="tag">Python</a></li>
         </ul>
