--- a/listings/index.html
+++ b/listings/index.html
@@ -48,12 +48,7 @@
 </ul>
 </nav>
 
-<ul>
-    <li>
-<a href="firstpro.py.html"><i class="icon-file"></i> firstpro.py</a>
-</li>
-</ul>
-    <p class="sourceline"><a href="index" id="sourcelink">Source</a></p>
+    <p class="sourceline"><a href="index" id="sourcelink">Mənbə</a></p>
 
              
         <footer id="footer" role="contentinfo">
