--- a/stories/about.html
+++ b/stories/about.html
@@ -114,7 +114,7 @@ Complex is better than ">
 </pre>
     </div>
         <section class="comments">
-        <h2>Comments</h2>
+        <h2>Şərhlər</h2>
         
         
         <div id="disqus_thread"></div>
