--- a/listings/index.html
+++ b/listings/index.html
@@ -2,8 +2,9 @@
 <html prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article# " lang="en">
     <head>
     <meta charset="utf-8">
+    <meta name="description" content="listings">
     <meta name="viewport" content="width=device-width">
-    <title> | Just another simple blog</title>
+    <title>listings | Just another simple blog</title>
 
     
             <link href="../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
@@ -48,7 +49,7 @@
 </ul>
 </nav>
 
-    <p class="sourceline"><a href="index" id="sourcelink">Mənbə</a></p>
+    <p class="sourceline"><a href="index" id="sourcelink">Source</a></p>
 
              
         <footer id="footer" role="contentinfo">
